feat: Premium style redesign with auth fixes
New fitness color palette, upgraded typography, redesigned landing and home screens, 3D animations, responsive layouts, and backend auth fixes. Tested on web.